# college-stuff

./: .clang-format
computer_networks_project/: CMakeLists.txt  client.c  server.c
homework/: README.md
homework/lab_1/: ex1_solution.cpp  sample.cpp
security_lab/: CMakeLists.txt
security_lab/homework/lab_1/: README.md  ex1_solution.cpp  ex2_solution.cpp
